--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 PORT=3001
-REACT_APP_API_HOSTNAME=https://zingy-frangipane-52426a.netlify.app/api
+REACT_APP_API_HOSTNAME=http://localhost:8080/api
 REACT_APP_API_TIMEOUT=45000
 REACT_APP_VERSION=$npm_package_version-DEVELOPMENT
 REACT_APP_NAME=$npm_package_name
