--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@commitlint/cli": "^17.4.1",
+    "@commitlint/format": "^17.4.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.10.14",
@@ -56,7 +58,13 @@
     "build:uat": "env-cmd -f ./.env.uat react-scripts build && cp -p Staticfile build",
     "build:production": "env-cmd -f ./.env.production react-scripts build && cp -p Staticfile build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -81,6 +89,9 @@
     "@types/react": "^18.0.15",
     "@types/react-csv": "^1.1.3",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "commitizen": "^4.2.6",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3"
   }
 }
