--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "commit": "git-cz",
-    "git:add": "git add ."
+    "git:add": "git add .",
+    "prepare": "husky install"
   },
   "config": {
     "commitizen": {
