--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@commitlint/cli": "^17.4.1",
     "@commitlint/format": "^17.4.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@hookform/resolvers": "^2.9.10",
@@ -87,6 +86,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/js-cookie": "^3.0.1",
     "@types/react": "^18.0.15",
     "@types/react-csv": "^1.1.3",
